--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-axios": "^3.4.1",
     "vuetify": "^2.6.0"
   },
   "devDependencies": {
